--- a/todo1/src/pages/home/home.scss
+++ b/todo1/src/pages/home/home.scss
@@ -1,3 +1,19 @@
 page-home {
 
 }
+.high{
+    border-left:2px solid red;
+    padding-left: 4px;
+}
+
+.normal{
+    border-left:2px solid blue;
+    padding-left:4px;
+}
+.low{
+    border-left:2px solid green;
+    padding-left:4px;
+}
+.done{
+    text-decoration: line-through;
+}
